Fix bug where overflow protection would not apply
Specifically, it would not apply on Completed Tasks displayed in the
project view.

--- a/src/style.css
+++ b/src/style.css
@@ -79,7 +79,9 @@ button.project.active {
 }
 
 #content > div#notCompleted > div > p,
-#content > div#notCompleted > div > h2 {
+#content > div#notCompleted > div > h2,
+#content > div#completed > div > p,
+#content > div#completed > div > h2 {
     /* Prevents long desriptions from overflowing */
     overflow: hidden;
     white-space: nowrap;
